--- a/app/src/main/res/layout/activity_multiple_inherit_ance.xml
+++ b/app/src/main/res/layout/activity_multiple_inherit_ance.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderActivity">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/item_Recyclerview"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".MultipleInheritance.MultipleInheritANCE">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
